--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "المنصة-التعليمية-لقسم-علم-النفس---جامعة-العريش",
+  "name": "psychology-mastery---arish-university-(dr.-ahmed-hamdy)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "@google/genai": "^1.35.0",
+    "react-dom": "^19.2.3",
+    "react": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
